[gd_scene load_steps=6 format=3 uid="uid://bawk0e64b3fak"]

[ext_resource type="PackedScene" uid="uid://dqi7ekpwfx780" path="res://Scenes/Player/player.tscn" id="1_3q5hp"]
[ext_resource type="Script" uid="uid://da7t7flqcf7yp" path="res://Scenes/Main/game.gd" id="1_ae08i"]
[ext_resource type="Texture2D" uid="uid://bljhk4n30s141" path="res://Assets/Tilemap/world_tileset.png" id="3_t5uux"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h3ee8"]
texture = ExtResource("3_t5uux")
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)

[sub_resource type="TileSet" id="TileSet_ae08i"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_h3ee8")

[node name="Game" type="Node2D"]
script = ExtResource("1_ae08i")

[node name="Player" parent="." instance=ExtResource("1_3q5hp")]
FALL_DAMAGE_HEIGHT = 340.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ae08i")
collision_animatable = true
format = 2
layer_0/tile_data = PackedInt32Array(1966080, 0, 1, 1966081, 0, 1, 1966082, 0, 1, 1966083, 0, 1, 1966084, 0, 1, 1966085, 0, 1, 1966086, 0, 1, 1966087, 0, 1, 1966088, 0, 1, 1966089, 0, 1, 1966090, 0, 1, 1966091, 0, 1, 1966092, 0, 1, 1966093, 0, 1, 1966094, 0, 1, 1966095, 0, 1, 1966096, 0, 1, 1966097, 0, 1, 1966098, 0, 1, 1966099, 0, 1, 1966100, 0, 1, 1966101, 0, 1, 1966102, 0, 1, 1966103, 0, 1, 1966104, 0, 1, 1966105, 0, 1, 1966106, 0, 1, 1966107, 0, 1, 1966108, 0, 1, 1966109, 0, 1, 1966110, 0, 1, 1900574, 0, 1, 1966079, 0, 1, 2031615, 0, 1, 1835038, 0, 1, 1769502, 0, 1, 1703966, 0, 1, 1638430, 0, 1, 1572894, 0, 1, 1507358, 0, 1, 1441822, 0, 1, 1376286, 0, 1, 1310750, 0, 1, 1245214, 0, 1, 1179678, 0, 1, 1114142, 0, 1, 1048606, 0, 1, 983070, 0, 1, 917534, 0, 1, 851998, 0, 1, 786462, 0, 1, 720926, 0, 1, 655390, 0, 1, 589854, 0, 1, 524318, 0, 1, 458782, 0, 1, 393246, 0, 1, 327710, 0, 1, 262174, 0, 1, 196638, 0, 1, 131102, 0, 1, 65566, 0, 1, 30, 0, 1, -65506, 0, 1, 1900543, 0, 1, 1835007, 0, 1, 1769471, 0, 1, 1703935, 0, 1, 1638399, 0, 1, 1572863, 0, 1, 1507327, 0, 1, 1441791, 0, 1, 1376255, 0, 1, 1310719, 0, 1, 1245183, 0, 1, 1179647, 0, 1, 1114111, 0, 1, 1048575, 0, 1, 983039, 0, 1, 917503, 0, 1, 851967, 0, 1, 786431, 0, 1, 720895, 0, 1, 655359, 0, 1, 589823, 0, 1, 524287, 0, 1, 458751, 0, 1, 393215, 0, 1, 327679, 0, 1, 262143, 0, 1, 196607, 0, 1, 131071, 0, 1, 65535, 0, 1, -1, 0, 1, -65537, 0, 1, -131073, 0, 1, -196609, 0, 1, -262145, 0, 1, -327681, 0, 1, -393217, 0, 1, -458753, 0, 1, -524289, 0, 1, -589825, 0, 1, -655361, 0, 1, -720897, 0, 1, -786433, 0, 1, -851969, 0, 1, -917505, 0, 1, -983041, 0, 1, -1048577, 0, 1, -1114113, 0, 1, -1179649, 0, 1, -1245185, 0, 1, -1310721, 0, 1, -1376257, 0, 1, -1441793, 0, 1, -1507329, 0, 1, -1572865, 0, 1, -1638401, 0, 1, -1703937, 0, 1, -1769473, 0, 1, -1835009, 0, 1, -1900545, 0, 1, -1966080, 0, 1, -131042, 0, 1, -196578, 0, 1, -262114, 0, 1, -327650, 0, 1, -393186, 0, 1, -458722, 0, 1, -524258, 0, 1, -589794, 0, 1, -655330, 0, 1, -720866, 0, 1, -786402, 0, 1, -851938, 0, 1, -917474, 0, 1, -983010, 0, 1, -1048546, 0, 1, -1114082, 0, 1, -1179618, 0, 1, -1245154, 0, 1, -1310690, 0, 1, -1376226, 0, 1, -1441762, 0, 1, -1507298, 0, 1, -1572834, 0, 1, -1638370, 0, 1, -1703906, 0, 1, -1769442, 0, 1, -1834978, 0, 1, -1900514, 0, 1, -1966050, 0, 1, -1966081, 0, 1, -2031617, 0, 1, -2097153, 0, 1, -2162689, 0, 1, -2228225, 0, 1, -2293761, 0, 1, -2359297, 0, 1, -2424833, 0, 1, -2490369, 0, 1, -2555905, 0, 1, -2621441, 0, 1, -2686977, 0, 1, -2752513, 0, 1, -2818049, 0, 1, -2883585, 0, 1, -2949121, 0, 1, -3014657, 0, 1, -3080193, 0, 1, -3145729, 0, 1, -3211265, 0, 1, -3276801, 0, 1, -3342337, 0, 1, -3407873, 0, 1, -3473409, 0, 1, -3538945, 0, 1, -3604481, 0, 1, -3670017, 0, 1, -3735553, 0, 1, -3801089, 0, 1, -3866625, 0, 1, -3932160, 0, 1, -2031586, 0, 1, -2097122, 0, 1, -2162658, 0, 1, -2228194, 0, 1, -2293730, 0, 1, -2359266, 0, 1, -2424802, 0, 1, -2490338, 0, 1, -2555874, 0, 1, -2621410, 0, 1, -2686946, 0, 1, -2752482, 0, 1, -2818018, 0, 1, -2883554, 0, 1, -2949090, 0, 1, -3014626, 0, 1, -3080162, 0, 1, -3145698, 0, 1, -3211234, 0, 1, -3276770, 0, 1, -3342306, 0, 1, -3407842, 0, 1, -3473378, 0, 1, -3538914, 0, 1, -3604450, 0, 1, -3669986, 0, 1, -3735522, 0, 1, -3801058, 0, 1, -3866594, 0, 1, -3932130, 0, 1, -3932161, 0, 1, -3997697, 0, 1, -4063233, 0, 1, -4128769, 0, 1, -4194305, 0, 1, -4259841, 0, 1, -4325377, 0, 1, -4390913, 0, 1, -4456449, 0, 1, -4521985, 0, 1, -4587521, 0, 1, -4653057, 0, 1, -4718593, 0, 1, -4784129, 0, 1, -4849665, 0, 1, -4915201, 0, 1, -4980737, 0, 1, -5046273, 0, 1, -5111809, 0, 1, -5177345, 0, 1, -5242881, 0, 1, -5308417, 0, 1, -5373953, 0, 1, -5439489, 0, 1, -5505025, 0, 1, -5570561, 0, 1, -5636097, 0, 1, -5701633, 0, 1, -5767169, 0, 1, -5832705, 0, 1, -5898240, 0, 1, -3997666, 0, 1, -4063202, 0, 1, -4128738, 0, 1, -4194274, 0, 1, -4259810, 0, 1, -4325346, 0, 1, -4390882, 0, 1, -4456418, 0, 1, -4521954, 0, 1, -4587490, 0, 1, -4653026, 0, 1, -4718562, 0, 1, -4784098, 0, 1, -4849634, 0, 1, -4915170, 0, 1, -4980706, 0, 1, -5046242, 0, 1, -5111778, 0, 1, -5177314, 0, 1, -5242850, 0, 1, -5308386, 0, 1, -5373922, 0, 1, -5439458, 0, 1, -5504994, 0, 1, -5570530, 0, 1, -5636066, 0, 1, -5701602, 0, 1, -5767138, 0, 1, -5832674, 0, 1, -5898210, 0, 1, 0, 0, 1, -5898241, 0, 1, -5963777, 0, 1, -6029313, 0, 1, -6094849, 0, 1, -6160385, 0, 1, -6225921, 0, 1, -6291457, 0, 1, -6356993, 0, 1, -6422529, 0, 1, -6488065, 0, 1, -6553601, 0, 1, -6619137, 0, 1, -6684673, 0, 1, -6750209, 0, 1, -6815745, 0, 1, -6881281, 0, 1, -6946817, 0, 1, -7012353, 0, 1, -7077889, 0, 1, -7143425, 0, 1, -7208961, 0, 1, -7274497, 0, 1, -7340033, 0, 1, -7405569, 0, 1, -7471105, 0, 1, -7536641, 0, 1, -7602177, 0, 1, -7667713, 0, 1, -7733249, 0, 1, -7798785, 0, 1, -5963746, 0, 1, -6029282, 0, 1, -6094818, 0, 1, -6160354, 0, 1, -6225890, 0, 1, -6291426, 0, 1, -6356962, 0, 1, -6422498, 0, 1, -6488034, 0, 1, -6553570, 0, 1, -6619106, 0, 1, -6684642, 0, 1, -6750178, 0, 1, -6815714, 0, 1, -6881250, 0, 1, -6946786, 0, 1, -7012322, 0, 1, -7077858, 0, 1, -7143394, 0, 1, -7208930, 0, 1, -7274466, 0, 1, -7340002, 0, 1, -7405538, 0, 1, -7471074, 0, 1, -7536610, 0, 1, -7602146, 0, 1, -7667682, 0, 1, -7733218, 0, 1, -7798754, 0, 1, -7864290, 0, 1, -7864320, 0, 1, -7864321, 0, 1, -7929857, 0, 1, -7995393, 0, 1, -8060929, 0, 1, -8126465, 0, 1, -8192001, 0, 1, -8257537, 0, 1, -8323073, 0, 1, -8388609, 0, 1, -8454145, 0, 1, -8519681, 0, 1, -8585217, 0, 1, -8650753, 0, 1, -8716289, 0, 1, -8781825, 0, 1, -8847361, 0, 1, -8912897, 0, 1, -8978433, 0, 1, -9043969, 0, 1, -9109505, 0, 1, -9175041, 0, 1, -9240577, 0, 1, -9306113, 0, 1, -9371649, 0, 1, -9437185, 0, 1, -9502721, 0, 1, -9568257, 0, 1, -9633793, 0, 1, -9699329, 0, 1, -9764865, 0, 1, -7929826, 0, 1, -7995362, 0, 1, -8060898, 0, 1, -8126434, 0, 1, -8191970, 0, 1, -8257506, 0, 1, -8323042, 0, 1, -8388578, 0, 1, -8454114, 0, 1, -8519650, 0, 1, -8585186, 0, 1, -8650722, 0, 1, -8716258, 0, 1, -8781794, 0, 1, -8847330, 0, 1, -8912866, 0, 1, -8978402, 0, 1, -9043938, 0, 1, -9109474, 0, 1, -9175010, 0, 1, -9240546, 0, 1, -9306082, 0, 1, -9371618, 0, 1, -9437154, 0, 1, -9502690, 0, 1, -9568226, 0, 1, -9633762, 0, 1, -9699298, 0, 1, -9764834, 0, 1, -9830370, 0, 1, -9830400, 0, 1, -9830401, 0, 1, -9895937, 0, 1, -9961473, 0, 1, -10027009, 0, 1, -10092545, 0, 1, -10158081, 0, 1, -10223617, 0, 1, -10289153, 0, 1, -10354689, 0, 1, -10420225, 0, 1, -10485761, 0, 1, -10551297, 0, 1, -10616833, 0, 1, -10682369, 0, 1, -10747905, 0, 1, -10813441, 0, 1, -10878977, 0, 1, -10944513, 0, 1, -11010049, 0, 1, -11075585, 0, 1, -11141121, 0, 1, -11206657, 0, 1, -11272193, 0, 1, -11337729, 0, 1, -11403265, 0, 1, -11468801, 0, 1, -11534337, 0, 1, -11599873, 0, 1, -11665409, 0, 1, -11730945, 0, 1, -11796480, 0, 1, -9895906, 0, 1, -9961442, 0, 1, -10026978, 0, 1, -10092514, 0, 1, -10158050, 0, 1, -10223586, 0, 1, -10289122, 0, 1, -10354658, 0, 1, -10420194, 0, 1, -10485730, 0, 1, -10551266, 0, 1, -10616802, 0, 1, -10682338, 0, 1, -10747874, 0, 1, -10813410, 0, 1, -10878946, 0, 1, -10944482, 0, 1, -11010018, 0, 1, -11075554, 0, 1, -11141090, 0, 1, -11206626, 0, 1, -11272162, 0, 1, -11337698, 0, 1, -11403234, 0, 1, -11468770, 0, 1, -11534306, 0, 1, -11599842, 0, 1, -11665378, 0, 1, -11730914, 0, 1, -11796450, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 1, 24, 0, 1, 25, 0, 1, 26, 0, 1, 27, 0, 1, 28, 0, 1, 29, 0, 1)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(6, -1006)

[node name="camera2d" type="Camera2D" parent="."]
position = Vector2(240, 240)

[connection signal="change_camera_pos" from="Player" to="." method="_on_player_change_camera_pos"]
